[project]
name = "my_project_5"
version = "0.0.1"
description = "The test project"
authors = [
    {name = "", email = "zhaniyayeleussiz@gmail.com"},
]
dependencies = [
    "pip>=24.2",
    "ruff>=0.6.9",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
show-fixes = true
line-length =  120

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=4.0.1",
]
